[package]
name = "ol_swarm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forge = { path = "../../testsuite/forge" }
smoke-test = { path = "../../testsuite/smoke-test" }
rand = "0.8.3"
anyhow = "1.0.52"
tokio = { version = "1.8.1", features = ["full"] }
diem-types = { path = "../../types"}
